tests/baselines/reference/typeInfer1.errors.txt
tests/cases/compiler/typeInfer1.ts(11,5): error TS2322: Type '{ Moo: () => string; }' is not assignable to type 'ITextWriter2'.
  Property 'Write' is missing in type '{ Moo: () => string; }'.
tests/cases/compiler/typeInfer1.ts(12,5): error TS2339: Property 'Moo' does not exist on type 'ITextWriter2'.


==== tests/cases/compiler/typeInfer1.ts (2 errors) ====
    interface ITextWriter2 {
        Write(s:string):void;
        WriteLine(s:string):void;
    }
    
    var x: ITextWriter2 = {
        Write: function (s:string):void {},
        WriteLine: function(s:string):void {}
    }
    
    var yyyyyyyy: ITextWriter2 = {
        ~~~~~~~~
!!! error TS2322: Type '{ Moo: () => string; }' is not assignable to type 'ITextWriter2'.
!!! error TS2322:   Property 'Write' is missing in type '{ Moo: () => string; }'.
        Moo: function() { return "cow"; }
        ~~~
!!! error TS2339: Property 'Moo' does not exist on type 'ITextWriter2'.
    }